fotter overlapping tree fixed

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -58,6 +58,7 @@
 
   .octotree_view {
     display: none;
+    margin-bottom: 30px;
     box-sizing: border-box;
 
     &.current {
